--- a/EjercicioFORM/style.css
+++ b/EjercicioFORM/style.css
@@ -1,10 +1,11 @@
 body {
 	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:13px;
+	font-size:11px;
 	font-weight: bold;
 	color:#333333;
-	background-color:#f9f7ed;
-	margin:60px;
+	background-image:url(img/fondo.jpg);
+	background-size: cover;
+	margin:0px;
 }
 #wrapper {
 	width:800px;
@@ -13,12 +14,13 @@ body {
 }
 #header {
 	height:80px;
-	background-image:url(img/header.png);
+	background-image:url(img/headviajes.jpg);
 	background-repeat:no-repeat;
+	background-size: 800px;
 	height:120px;
 }
 #menu {
-	background-image:url(img/menu.png);
+	background-image:url(img/pergaminomenu.png);
 	height:25px;
 	padding-top:5px;
 	text-align:center;
@@ -38,7 +40,10 @@ body {
 	height:130px;
 	color:#FFFFFF;
 	text-align:center;
-	background-image:url(img/footer.png);
+	background-image:url(img/footerviajes.jpg);
+	background-size: 280px;
+	height:120px;
+
 }
 h1 {
 	color:#33170D;
@@ -46,6 +51,14 @@ h1 {
 	border-bottom:1px solid #FF9900;
 	padding-bottom:10px;
 }
+
+.error {
+    color: #ff0000;
+    font-family: arial;
+    font-size: 10pt;
+    font-style:italic;
+}
+
 .styerror { /*color: #938e06; font-family: arial; font-size: 10pt; fontstyle:italic*/
 
 			background-color: #BC1010;
@@ -53,7 +66,7 @@ h1 {
 			border-radius: 4px;
 			color: white;
 			font-weight: bold;
-			font-size: 12px;
+			font-size: 10pt;
 			margin-left: 16px;	
 			position: absolute; }
 			
