--- a/EjercicioFORM/view/css/style.css
+++ b/EjercicioFORM/view/css/style.css
@@ -108,14 +108,14 @@ h1 {
 	background-color:green;
 	-moz-border-radius:28px;
 	-webkit-border-radius:28px;
-	border-radius:28px;
+	border-radius:10px;
 	border:1px solid green;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:17px;
-	padding:16px 31px;
+	padding:10px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
@@ -127,17 +127,18 @@ h1 {
 	top:1px;
 }
 .Button_blue {
+	margin: 10px;
 	background-color:blue;
 	-moz-border-radius:28px;
 	-webkit-border-radius:28px;
-	border-radius:28px;
+	border-radius:10px;
 	border:1px solid blue;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:17px;
-	padding:16px 31px;
+	padding:10px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
@@ -152,14 +153,14 @@ h1 {
 	background-color:crimson;
 	-moz-border-radius:28px;
 	-webkit-border-radius:28px;
-	border-radius:28px;
+	border-radius:10px;
 	border:1px solid crimson;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:17px;
-	padding:16px 31px;
+	padding:10px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
