--- a/EjercicioFORM/view/css/style.css
+++ b/EjercicioFORM/view/css/style.css
@@ -122,3 +122,23 @@ a.button{
     text-decoration: none;
     color: initial;
 }
+
+
+.cnt {
+width: 100%;
+min-height: 350px;
+border: 1px solid #e1e1e1;
+}
+.add {
+    font-size:20px;
+    font-weight:800;
+    padding:30px;
+}
+#contact-sec {
+  padding-top:0px;
+}
+
+.back-light {
+    background-color:rgba(0, 0, 0, 0.50);
+    padding:10px;
+}
